a bunch of manual regrades